# mlflow-assistant

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  versions.json
.github/workflows/: ci-cd.yml  docs.yml  lint.yml  publish.yml  test-docs.yml  test.yml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/changelog/: index.html
0.1.2/installation/: index.html
0.1.2/reference/SUMMARY/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/changelog/: index.html
0.1.3/installation/: index.html
0.1.3/reference/SUMMARY/: index.html
0.1.3/search/: search_index.json
0.1.4/: 404.html  index.html  objects.inv  sitemap.xml
0.1.4/changelog/: index.html
0.1.4/installation/: index.html
0.1.4/reference/SUMMARY/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  objects.inv  sitemap.xml
0.1.5/changelog/: index.html
0.1.5/installation/: index.html
0.1.5/reference/SUMMARY/: index.html
0.1.5/search/: search_index.json
docs/: index.md  installation.md
docs/scripts/: gen_ref_nav.py
docs/stylesheets/: extra.css
installation/: index.html
search/: search_index.json
src/mlflow_assistant/: __init__.py  main.py
src/mlflow_assistant/cli/: __init__.py  commands.py  setup.py  (+1 more)
tests/: conftest.py  test_core.py
tests/integration/: conftest.py  test_connection_integration.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_connection.py  test_core.py  test_provider.py
(+83 files in other folders)
