[project]
name = "mlflow-assistant"
version = "0.2.0"
description = "An MLflow plugin that enables natural language conversations with your MLflow server using LLM providers like OpenAI and Ollama."
authors = [
    {name = "Hugo Carvalho",email = "hugodanielsilvacarvalho.hc@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlflow>=2.21.0,<3.0.0",
    "click>=8.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.scripts]
mlflow-assistant = "mlflow_assistant.cli.commands:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"
pre-commit = "^4.2.0"
pytest = "^8.3.5"

